# Telco-churn

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
models/: churn_model.pkl
notebooks/: 01_eda_and_business_insight.ipynb  02_model_training_evaluation.ipynb  03_model_interpretability.ipynb
src/telco_churn/: __init__.py  config.py  dashboard.py  evaluate.py  preprocess.py  recommend.py  train.py  visualization.py
src/telco_churn/api/: __init__.py  main.py  prediction.py  schemas.py
tests/: test_api.py
